--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(seedTable-build)
+project(distance-build)
 
 set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
 find_package(CUDA 10.0 REQUIRED)
