--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(distance-build)
+project(seedTable-build)
 
 set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
 find_package(CUDA 10.0 REQUIRED)
@@ -20,9 +20,10 @@ include(${TBB_DIR}/cmake/TBBBuild.cmake)
 tbb_build(TBB_ROOT ${TBB_DIR} CONFIG_DIR TBB_DIR MAKE_ARGS tbb_cpf=1)
 find_package(TBB REQUIRED tbbmalloc tbbmalloc_proxy tbb_preview)
 
-add_executable (distance
-    src/distance.cu
+add_executable (seedTable
+    src/seedTable.cu
+    src/twoBitCompressor.cpp
     src/main.cpp)
 
-target_link_libraries(distance PRIVATE ${Boost_LIBRARIES} ${ZLIB_LIBRARIES} ${TBB_IMPORTED_TARGETS})
+target_link_libraries(seedTable PRIVATE ${Boost_LIBRARIES} ${ZLIB_LIBRARIES} ${TBB_IMPORTED_TARGETS})
 
