--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "ios": "cpp"
+        "ios": "cpp",
+        "iosfwd": "cpp",
+        "fstream": "cpp",
+        "locale": "cpp"
     }
 }
